Add card filme principal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style/main.css">
     <title>Netflix Clone</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -19,5 +21,26 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">THE IT CROWD</h3>
+                <p class="descricao">
+                    Ajudados por uma gestora que não entende nada de tecnologia, dois nerds de TI exploram o melhor que
+                    a vida tem numa empresa com um novo proprietário.
+                </p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
