Add estilço nos botoes principais

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+
     <title>Netflix Clone</title>
 </head>
 
@@ -17,30 +18,34 @@
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
                 <a href="#">Filmes</a>
-                <a href="#">Documentários</a>
+                <a href="#">Bombando</a>
+                <a href="#">Minha Lista</a>
             </nav>
-        </div>
     </header>
 
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">THE IT CROWD</h3>
+                <div class="texto-descricao">
+                    <h3 class="titulo">THE IT CROWD</h3>
                 <p class="descricao">
                     Ajudados por uma gestora que não entende nada de tecnologia, dois nerds de TI exploram o melhor que
                     a vida tem numa empresa com um novo proprietário.
                 </p>
                 <div class="botoes">
-                    <button role="button" class="botao">
-                        ASSISTIR AGORA
+                    <button role="button" class="botao-assistir">
+                       <i class="fas fa-play"></i> Assistir
                     </button>
-                    <button role="button" class="botao">
-                        MAIS INFORMAÇÕES
+                    <button role="button" class="botao-informacoes">
+                        <i class="fas fa-info-circle"></i>Mais informações
                     </button>
+                </div> 
                 </div>
             </div>
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/ffaae6a959.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
