--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <div class="texto-descricao">
-                    <h3 class="titulo">THE IT CROWD</h3>
+                <h3 class="titulo">THE IT CROWD</h3>
                 <p class="descricao">
-                    Ajudados por uma gestora que não entende nada de tecnologia, dois nerds de TI exploram o melhor que
+                    Ajudados por uma gestora que não entende nada de tecnologia, dois nerds de TI exploram o melhor
+                    que
                     a vida tem numa empresa com um novo proprietário.
                 </p>
                 <div class="botoes">
                     <button role="button" class="botao-assistir">
-                       <i class="fas fa-play"></i> Assistir
+                        <i class="fas fa-play"></i> Assistir
                     </button>
                     <button role="button" class="botao-informacoes">
                         <i class="fas fa-info-circle"></i>Mais informações
                     </button>
-                </div> 
                 </div>
             </div>
         </div>
