--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
 
     <title>Netflix Clone</title>
 </head>
@@ -44,7 +48,29 @@
         </div>
     </main>
 
+    <div class="carrossel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/hacker.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mr robot.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/secrets of silicon valley.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/silicon valley.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/ffaae6a959.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
+
+
 
 </html>
